Am adaugat functia clearscreen + doua fisiere pentru memorarea celor mai bune scoruri

--- a/code/SNAKE_PROJECT_V1.cbp
+++ b/code/SNAKE_PROJECT_V1.cbp
@@ -32,6 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="TopScoreSinglePlayer" />
+		<Unit filename="TopScoreVsMode" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
